[package]
name = "systemprompt-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application runtime context and module registry for systemprompt.io"

[lints]
workspace = true

[features]
default = []
geolocation = ["dep:maxminddb", "systemprompt-analytics/geolocation"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
axum = { workspace = true }
maxminddb = { workspace = true, optional = true }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-logging = { workspace = true, features = ["cli"] }
systemprompt-loader = { workspace = true }
systemprompt-analytics = { workspace = true }
systemprompt-files = { workspace = true }
systemprompt-users = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
