[package]
name = "systemprompt-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application runtime for systemprompt.io AI governance infrastructure. AppContext, lifecycle builder, extension registry, and module wiring for the MCP governance pipeline."
readme = "README.md"

[lints]
workspace = true

[features]
default = []
geolocation = ["dep:maxminddb", "systemprompt-analytics/geolocation"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
axum = { workspace = true }
maxminddb = { workspace = true, optional = true }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-logging = { workspace = true, features = ["cli"] }
systemprompt-loader = { workspace = true }
systemprompt-analytics = { workspace = true }
systemprompt-files = { workspace = true }
systemprompt-users = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
