[package]
name = "systemprompt-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core scheduler module for systemprompt.io OS - background jobs and cron tasks"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID for job IDs
uuid = { workspace = true }

# URL parsing
url = { workspace = true }
urlencoding = { workspace = true }

# Core libs - scheduler only depends on infrastructure modules
systemprompt-analytics = { path = "../../domain/analytics", version = "0.0.6" }
systemprompt-database = { path = "../../infra/database", version = "0.0.6" }
systemprompt-extension = { path = "../../shared/extension", version = "0.0.6" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.6" }
systemprompt-logging = { path = "../../infra/logging", version = "0.0.6" }
systemprompt-models = { path = "../../shared/models", version = "0.0.6" }
systemprompt-provider-contracts = { path = "../../shared/provider-contracts", version = "0.0.6" }
systemprompt-runtime = { path = "../runtime", version = "0.0.6" }
systemprompt-traits = { path = "../../shared/traits", version = "0.0.6" }
systemprompt-users = { path = "../../domain/users", version = "0.0.6" }

# Job registration and discovery
inventory = { workspace = true }

# Traits
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
