[package]
name = "systemprompt-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core scheduler module for systemprompt.io OS - background jobs and cron tasks"
include = ["src/**/*", "schema/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID for job IDs
uuid = { workspace = true }

# URL parsing
url = { workspace = true }
urlencoding = { workspace = true }

# Core libs - scheduler only depends on infrastructure modules
systemprompt-analytics = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-models = { workspace = true }
systemprompt-provider-contracts = { workspace = true }
systemprompt-runtime = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-users = { workspace = true }

# Job registration and discovery
inventory = { workspace = true }

# Traits
async-trait = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
