[package]
name = "systemprompt-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Sync services for systemprompt.io - file, database, and crate deployment synchronization"

[dependencies]
# Core runtime
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Database
sqlx = { workspace = true }

# Compression/archive
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }

# File scanning
walkdir = { workspace = true }

# Domain crates for local sync
systemprompt-agent = { path = "../../domain/agent", version = "0.0.8" }
systemprompt-content = { path = "../../domain/content", version = "0.0.8" }
systemprompt-database = { path = "../../infra/database", version = "0.0.8" }
systemprompt-logging = { path = "../../infra/logging", version = "0.0.8" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.8" }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[[test]]
name = "unit"
path = "../../tests/unit/app/sync/mod.rs"

[lints]
workspace = true
