[package]
name = "systemprompt-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Sync services for systemprompt.io - file, database, and crate deployment synchronization"
include = ["src/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[dependencies]
# Core runtime
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Database
sqlx = { workspace = true }

# Compression/archive
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }

# File scanning
walkdir = { workspace = true }

# Domain crates for local sync
systemprompt-agent = { workspace = true }
systemprompt-content = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-provider-contracts = { workspace = true }

# Async trait
async-trait = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[[test]]
name = "unit"
path = "../../tests/unit/app/sync/mod.rs"

[lints]
workspace = true
