[package]
name = "systemprompt-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core Agent protocol module for systemprompt.io"

[lints]
workspace = true

[features]
default = ["web"]
cli = []
web = [
    "dep:axum",
    "dep:tower", 
    "dep:tower-http",
    "dep:bytes",
    "dep:jsonwebtoken",
    "dep:tokio-stream",
    "dep:urlencoding"
]

[dependencies]
# Core traits for interface definitions (no circular dependencies)
systemprompt-extension = { path = "../../shared/extension", version = "0.0.5" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.5", features = ["sqlx"] }
systemprompt-models = { path = "../../shared/models", version = "0.0.5", features = ["web"] }
systemprompt-traits = { path = "../../shared/traits", version = "0.0.5" }
inventory = { workspace = true }

# Core module dependencies
systemprompt-loader = { path = "../../infra/loader", version = "0.0.5" }
systemprompt-events = { path = "../../infra/events", version = "0.0.5" }
systemprompt-logging = { path = "../../infra/logging", version = "0.0.5" }
systemprompt-config = { path = "../../infra/config", version = "0.0.5" }
systemprompt-database = { path = "../../infra/database", version = "0.0.5" }
systemprompt-security = { path = "../../infra/security", version = "0.0.5" }
rmcp = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# Web framework (optional, only for web builds)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Templating (optional, only for web builds)

# OpenAPI Documentation (optional, only for web builds)

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bytes = { workspace = true, optional = true }

# Database
sqlx = { workspace = true }

# Security
jsonwebtoken = { workspace = true, optional = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenvy = { workspace = true }
clap = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
md5 = { workspace = true }

# HTTP client
reqwest = { workspace = true }
url = { workspace = true }

# OAuth2 client
oauth2 = { workspace = true }

# Cryptographic hashing for webhooks
hmac = { workspace = true }

# Hex encoding/decoding
hex = { workspace = true }

# Streaming and async (optional, only for web builds)
tokio-stream = { workspace = true, optional = true }

# URL encoding (optional, only for web builds)
urlencoding = { workspace = true, optional = true }

# Unix system utilities
nix = { workspace = true }

# File walking
walkdir = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
axum-test = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
