[package]
name = "systemprompt-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Agent-to-Agent (A2A) protocol for systemprompt.io AI governance: streaming, JSON-RPC models, task lifecycle, .well-known discovery, and governed agent orchestration."
readme = "README.md"
include = ["src/**/*", "schema/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[dependencies]
# Core traits for interface definitions (no circular dependencies)
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }
systemprompt-models = { workspace = true, features = ["web"] }
systemprompt-traits = { workspace = true }
inventory = { workspace = true }

# Core module dependencies
systemprompt-loader = { workspace = true }
systemprompt-events = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-security = { workspace = true }
rmcp = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bytes = { workspace = true }

# Database
sqlx = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenvy = { workspace = true }
clap = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
md5 = { workspace = true }

# HTTP client
reqwest = { workspace = true }
url = { workspace = true }

# OAuth2 client
oauth2 = { workspace = true }

# Cryptographic hashing for webhooks
hmac = { workspace = true }

# Hex encoding/decoding
hex = { workspace = true }

tokio-stream = { workspace = true }
urlencoding = { workspace = true }

# Unix system utilities
nix = { workspace = true }

# File walking
walkdir = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
axum-test = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
