[package]
name = "systemprompt-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Agent-to-Agent (A2A) protocol for systemprompt.io AI governance: streaming, JSON-RPC models, task lifecycle, .well-known discovery, and governed agent orchestration."
readme = "README.md"
include = ["src/**/*", "schema/**/*", "build.rs", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[build-dependencies]
systemprompt-extension = { workspace = true }

[dependencies]
# Core traits for interface definitions (no circular dependencies)
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }
systemprompt-models = { workspace = true, features = ["web", "sqlx"] }
systemprompt-config = { workspace = true }
systemprompt-traits = { workspace = true }
inventory = { workspace = true }

# Core module dependencies
systemprompt-analytics = { workspace = true }
systemprompt-loader = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-security = { workspace = true }
rmcp = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["signal"] }
futures = { workspace = true }
async-trait = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Database
sqlx = { workspace = true }

# Security
sha2 = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }


# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Cryptographic hashing for webhooks
hmac = { workspace = true }

# Hex encoding/decoding
hex = { workspace = true }

tokio-stream = { workspace = true }

# Unix system utilities
nix = { workspace = true }

# File walking

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }

[package.metadata.cargo-machete]
# inventory: compile-time registration via register_extension!/submit_* macros (::inventory::submit!)
ignored = ["inventory"]
