[package]
name = "systemprompt-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core AI module for SystemPrompt"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }

# Job registration
inventory = { workspace = true }

# Internal dependencies
systemprompt-models = { path = "../../shared/models", version = "0.0.1" }
systemprompt-database = { path = "../../infra/database", version = "0.0.1" }
systemprompt-loader = { path = "../../infra/loader", version = "0.0.1" }
systemprompt-logging = { path = "../../infra/logging", version = "0.0.1" }
systemprompt-traits = { path = "../../shared/traits", version = "0.0.1" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.1", features = ["sqlx"] }

