[package]
name = "systemprompt-analytics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Analytics module for systemprompt.io - session tracking, metrics, and reporting"
include = ["src/**/*", "schema/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[features]
default = []
web = ["dep:axum"]

[dependencies]
# Core runtime
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP types (framework-agnostic)
http = { workspace = true }

# Web framework (optional, for Request extraction)
axum = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# GeoIP
maxminddb = { workspace = true }
url = { workspace = true }

# systemprompt.io dependencies
systemprompt-database = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }

inventory = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
