[package]
name = "systemprompt-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Analytics for systemprompt.io AI governance infrastructure. Session, agent, tool, and microdollar-precision cost attribution across the MCP governance pipeline."
readme = "README.md"
include = ["src/**/*", "schema/**/*", "build.rs", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[build-dependencies]
systemprompt-extension = { workspace = true }

[features]
default = []
geolocation = ["dep:maxminddb"]

[dependencies]
# Core runtime
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP types (framework-agnostic)
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# GeoIP
maxminddb = { workspace = true, optional = true }
url = { workspace = true }

# systemprompt.io dependencies
systemprompt-database = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }

inventory = { workspace = true }
xxhash-rust = { workspace = true }

[package.metadata.cargo-machete]
# inventory: compile-time registration via register_extension!/submit_* macros (::inventory::submit!) / thiserror: derived through the domain_error! macro (#[derive(::thiserror::Error)])
ignored = ["inventory", "thiserror"]
