[package]
name = "systemprompt-content"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content module for systemprompt.io with content management, analytics, and event tracking"

[lints]
workspace = true

[dependencies]
# Core modules
systemprompt-database = { path = "../../infra/database" }
systemprompt-extension = { path = "../../shared/extension" }
systemprompt-identifiers = { path = "../../shared/identifiers", features = ["sqlx"] }
systemprompt-logging = { path = "../../infra/logging" }
systemprompt-models = { path = "../../shared/models" }

# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "uuid"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

# Job registration
inventory = { workspace = true }
async-trait = { workspace = true }
systemprompt-traits = { path = "../../shared/traits" }
systemprompt-provider-contracts = { path = "../../shared/provider-contracts" }
systemprompt-config = { path = "../../infra/config" }

# Static content generation
comrak = { workspace = true }
handlebars = { workspace = true }
quick-xml = { version = "0.31", features = ["serialize"] }
indicatif = { workspace = true }

# HTTP
reqwest = { workspace = true }

# UUID to hex conversion
hex = { workspace = true }

# URL handling
urlencoding = { workspace = true }
url = { workspace = true }

# Random number generation
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
