[package]
name = "systemprompt-content"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content module for systemprompt.io with content management, analytics, and event tracking"
include = ["src/**/*", "schema/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[dependencies]
# Core modules
systemprompt-cloud = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }
systemprompt-logging = { workspace = true }
systemprompt-models = { workspace = true }

# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "uuid"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

# Job registration
inventory = { workspace = true }
async-trait = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-provider-contracts = { workspace = true }
systemprompt-config = { workspace = true }

# Static content generation
comrak = { workspace = true }
handlebars = { workspace = true }
quick-xml = { version = "0.31", features = ["serialize"] }
indicatif = { workspace = true }

# HTTP
reqwest = { workspace = true }

# UUID to hex conversion
hex = { workspace = true }

# URL handling
urlencoding = { workspace = true }
url = { workspace = true }

# Random number generation
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
