[package]
name = "systemprompt-files"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "File management module for systemprompt.io"

[lints]
workspace = true

[dependencies]
systemprompt-cloud = { path = "../../infra/cloud", version = "0.0.13" }
systemprompt-database = { path = "../../infra/database", version = "0.0.13" }
systemprompt-extension = { path = "../../shared/extension", version = "0.0.13" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.13", features = ["sqlx"] }
systemprompt-logging = { path = "../../infra/logging", version = "0.0.13" }
systemprompt-models = { path = "../../shared/models", version = "0.0.13" }
systemprompt-provider-contracts = { path = "../../shared/provider-contracts", version = "0.0.13" }
systemprompt-traits = { path = "../../shared/traits", version = "0.0.13" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
