[package]
name = "systemprompt-marketplace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Marketplace bounded context for systemprompt.io. Resolves the active marketplace, loads the on-disk catalogue (plugins, skills, agents, hooks, managed MCP servers), scopes and per-user filters it, and assembles the canonical signed bridge manifest."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
systemprompt-models = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-security = { workspace = true }
